@@ -19,6 +19,8 @@ namespace irr
 		EKA_STRAFE_RIGHT,
 		EKA_JUMP_UP,
 		EKA_CROUCH,
+		EKA_ROTATE_LEFT,
+		EKA_ROTATE_RIGHT,
 		EKA_COUNT,
 
 		//! This value is not used. It only forces this enumeration to compile in 32 bit.
